--- a/Module01/ex01/Makefile
+++ b/Module01/ex01/Makefile
@@ -6,14 +6,14 @@
 #    By: tmarts <tmarts@student.42heilbronn.de>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/01 17:38:05 by tmarts            #+#    #+#              #
-#    Updated: 2023/09/04 13:52:17 by tmarts           ###   ########.fr        #
+#    Updated: 2023/09/04 13:52:47 by tmarts           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME		= moar_brainzzz
 CPP			= c++
 CFLAGS		= -Wall -Wextra -Werror -std=c++98
-SRC			= main.cpp Zombie.cpp newZombie.cpp randomChump.cpp
+SRC			= main.cpp Zombie.cpp zombieHorde.cpp
 INC			= Zombie.hpp
 OBJ_DIR		= obj
 OBJ			= $(addprefix $(OBJ_DIR)/, $(SRC:%.cpp=%.o))
