--- a/Module03/ex02/Makefile
+++ b/Module03/ex02/Makefile
@@ -5,16 +5,16 @@
 #                                                     +:+ +:+         +:+      #
 #    By: tmarts <tmarts@student.42heilbronn.de>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/09/08 15:08:05 by tmarts            #+#    #+#              #
-#    Updated: 2023/09/10 18:12:47 by tmarts           ###   ########.fr        #
+#    Created: 2023/09/13 18:57:54 by tmarts            #+#    #+#              #
+#    Updated: 2023/09/14 20:05:35 by tmarts           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME		= fixed01
+NAME		= Frag
 CPP			= c++
 CFLAGS		= -Wall -Wextra -Werror -std=c++98
-SRC			= main.cpp Fixed.cpp
-INC			= Fixed.hpp
+SRC			= main.cpp ClapTrap.cpp ScavTrap.cpp FragTrap.cpp
+INC			= ClapTrap.hpp ScavTrap.hpp FragTrap.hpp
 OBJ_DIR		= obj
 OBJ			= $(addprefix $(OBJ_DIR)/, $(SRC:%.cpp=%.o))
 all : $(NAME)
