--- a/Module01/ex04/Makefile
+++ b/Module01/ex04/Makefile
@@ -6,13 +6,14 @@
 #    By: tmarts <tmarts@student.42heilbronn.de>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/04 18:21:56 by tmarts            #+#    #+#              #
-#    Updated: 2023/09/04 18:22:37 by tmarts           ###   ########.fr        #
+#    Updated: 2023/09/21 20:57:37 by tmarts           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME		= filestreams
 CPP			= c++
-CFLAGS		= -Wall -Wextra -Werror -std=c++98
+CPPFLAGS	= -Wall -Wextra -Werror -std=c++98
+# CPPFLAGS	+= -g3 -fsanitize=address
 SRC			= main.cpp 
 OBJ_DIR		= obj
 OBJ			= $(addprefix $(OBJ_DIR)/, $(SRC:%.cpp=%.o))
@@ -25,7 +26,7 @@ $(NAME) : $(OBJ)
 clean : 
 	rm -rf $(OBJ_DIR)
 fclean : clean
-	rm -rf $(NAME)
+	rm -f $(NAME)
 re : fclean all
 
 .PHONY : clean, fclean, all, re
