--- a/Module00/ex00/Makefile
+++ b/Module00/ex00/Makefile
@@ -6,13 +6,14 @@
 #    By: tmarts <tmarts@student.42heilbronn.de>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/08/15 19:22:42 by tmarts            #+#    #+#              #
-#    Updated: 2023/08/21 16:08:19 by tmarts           ###   ########.fr        #
+#    Updated: 2023/09/21 20:51:36 by tmarts           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME		= megaphone
 CPP			= c++
-CFLAGS		= -Wall -Wextra -Werror -std=c++98
+CPPFLAGS	= -Wall -Wextra -Werror -std=c++98
+# CPPFLAGS	+= -g3 -fsanitize=address
 SRC			= megaphone.cpp
 OBJ_DIR		= obj
 OBJ			= $(addprefix $(OBJ_DIR)/, $(SRC:%.cpp=%.o))
@@ -20,13 +21,13 @@ OBJ			= $(addprefix $(OBJ_DIR)/, $(SRC:%.cpp=%.o))
 all	: $(NAME)
 $(OBJ_DIR)/%.o : %.cpp
 	@mkdir -p $(dir $@)
-	$(CPP) $(FLAGS) -c $< -o $@
+	$(CPP) $(CPPFLAGS) -c $< -o $@
 $(NAME) : $(OBJ)
-	$(CPP) $(FLAGS) $^ -o $@
+	$(CPP) $(CPPFLAGS) $^ -o $@
 clean : 
 	rm -rf $(OBJ_DIR)
 fclean : clean
-	rm -rf $(NAME)
+	rm -f $(NAME)
 re : fclean all
 
 .PHONY : clean, fclean, all, re
