--- a/Module01/ex02/Makefile
+++ b/Module01/ex02/Makefile
@@ -5,27 +5,28 @@
 #                                                     +:+ +:+         +:+      #
 #    By: tmarts <tmarts@student.42heilbronn.de>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/09/01 17:38:05 by tmarts            #+#    #+#              #
-#    Updated: 2023/09/04 14:21:16 by tmarts           ###   ########.fr        #
+#    Created: 2023/09/01 17:38:05 by tmarts            #+#    ./#+#              #
+#    Updated: 2023/09/21 20:54:33 by tmarts           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME		= hi_brain
 CPP			= c++
-CFLAGS		= -Wall -Wextra -Werror -std=c++98
+CPPFLAGS	= -Wall -Wextra -Werror -std=c++98
+# CPPFLAGS	+= -g3 -fsanitize=address
 SRC			= main.cpp 
 OBJ_DIR		= obj
 OBJ			= $(addprefix $(OBJ_DIR)/, $(SRC:%.cpp=%.o))
 all : $(NAME)
 $(OBJ_DIR)/%.o : %.cpp
 	@mkdir -p $(dir $@)
-	$(CPP) $(FLAGS) -c $< -o $@
+	$(CPP) $(CPPFLAGS) -c $< -o $@
 $(NAME) : $(OBJ)
-	$(CPP) $(FLAGS) $^ -o $@
+	$(CPP) $(CPPFLAGS) $^ -o $@
 clean : 
 	rm -rf $(OBJ_DIR)
 fclean : clean
-	rm -rf $(NAME)
+	rm -f $(NAME)
 re : fclean all
 
 .PHONY : clean, fclean, all, re
