--- a/Module01/ex03/Makefile
+++ b/Module01/ex03/Makefile
@@ -6,13 +6,14 @@
 #    By: tmarts <tmarts@student.42heilbronn.de>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/04 14:33:08 by tmarts            #+#    #+#              #
-#    Updated: 2023/09/04 14:35:01 by tmarts           ###   ########.fr        #
+#    Updated: 2023/09/21 20:56:12 by tmarts           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME		= violence
 CPP			= c++
-CFLAGS		= -Wall -Wextra -Werror -std=c++98
+CPPFLAGS	= -Wall -Wextra -Werror -std=c++98
+# CPPFLAGS	+= -g3 -fsanitize=address
 SRC			= main.cpp Weapon.cpp HumanA.cpp HumanB.cpp
 INC			= Weapon.hpp HumanA.hpp HumanB.cpp
 OBJ_DIR		= obj
@@ -20,13 +21,13 @@ OBJ			= $(addprefix $(OBJ_DIR)/, $(SRC:%.cpp=%.o))
 all : $(NAME)
 $(OBJ_DIR)/%.o : %.cpp $(INC)
 	@mkdir -p $(dir $@)
-	$(CPP) $(FLAGS) -c $< -o $@
+	$(CPP) $(CPPFLAGS) -c $< -o $@
 $(NAME) : $(OBJ)
-	$(CPP) $(FLAGS) $^ -o $@
+	$(CPP) $(CPPFLAGS) $^ -o $@
 clean : 
 	rm -rf $(OBJ_DIR)
 fclean : clean
-	rm -rf $(NAME)
+	rm -f $(NAME)
 re : fclean all
 
 .PHONY : clean, fclean, all, re
