--- a/Module03/ex03/Makefile
+++ b/Module03/ex03/Makefile
@@ -6,13 +6,14 @@
 #    By: tmarts <tmarts@student.42heilbronn.de>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/13 18:57:54 by tmarts            #+#    #+#              #
-#    Updated: 2023/09/14 21:33:06 by tmarts           ###   ########.fr        #
+#    Updated: 2023/09/21 21:09:44 by tmarts           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME		= Frag
 CPP			= c++
-CFLAGS		= -Wall -Wextra -Werror -std=c++98
+CPPFLAGS	= -Wall -Wextra -Werror -std=c++98
+CPPFLAGS	+= -g3 -fsanitize=address
 SRC			= main.cpp ClapTrap.cpp ScavTrap.cpp FragTrap.cpp Diamondtrap.cpp
 INC			= ClapTrap.hpp ScavTrap.hpp FragTrap.hpp DiamondTrap.hpp
 OBJ_DIR		= obj
@@ -26,7 +27,7 @@ $(NAME) : $(OBJ)
 clean : 
 	rm -rf $(OBJ_DIR)
 fclean : clean
-	rm -rf $(NAME)
+	rm -f $(NAME)
 re : fclean all
 
 .PHONY : clean, fclean, all, re
