--- a/Module04/ex03/Makefile
+++ b/Module04/ex03/Makefile
@@ -6,13 +6,14 @@
 #    By: tmarts <tmarts@student.42heilbronn.de>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/17 13:33:24 by tmarts            #+#    #+#              #
-#    Updated: 2023/09/19 21:43:51 by tmarts           ###   ########.fr        #
+#    Updated: 2023/09/21 20:48:16 by tmarts           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME		= amateria
 CPP			= c++
-CFLAGS		= -Wall -Wextra -Werror -std=c++98
+CPPFLAGS	= -Wall -Wextra -Werror -std=c++98
+# CPPFLAGS	+= -g3 -fsanitize=address
 SRC			= main.cpp AMateria.cpp Cure.cpp Ice.cpp MateriaSource.cpp Character.cpp 
 INC			= AMateria.hpp ICharacter.hpp IMateriaSource.hpp Cure.hpp Ice.hpp  MateriaSource.hpp Character.hpp
 OBJ_DIR		= obj
@@ -20,13 +21,13 @@ OBJ			= $(addprefix $(OBJ_DIR)/, $(SRC:%.cpp=%.o))
 all : $(NAME)
 $(OBJ_DIR)/%.o : %.cpp $(INC)
 	@mkdir -p $(dir $@)
-	$(CPP) $(FLAGS) -c $< -o $@
+	$(CPP) $(CPPFLAGS) -c $< -o $@
 $(NAME) : $(OBJ)
-	$(CPP) $(FLAGS) $^ -o $@
+	$(CPP) $(CPPFLAGS) $^ -o $@
 clean : 
 	rm -rf $(OBJ_DIR)
 fclean : clean
-	rm -rf $(NAME)
+	rm -f $(NAME)
 re : fclean all
 
 .PHONY : clean, fclean, all, re
