--- a/Module05/ex01/Makefile
+++ b/Module05/ex01/Makefile
@@ -6,15 +6,15 @@
 #    By: tmarts <tmarts@student.42heilbronn.de>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/11/20 16:29:48 by tmarts            #+#    #+#              #
-#    Updated: 2023/11/26 20:11:54 by tmarts           ###   ########.fr        #
+#    Updated: 2023/11/26 20:12:10 by tmarts           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME		= bureau00
+NAME		= bureau01
 CPP			= c++
 CPPFLAGS	= -Wall -Wextra -Werror -std=c++98 #-g3 -fsanitize=address
-SRC			= main.cpp Bureaucrat.cpp
-INC			= Bureaucrat.hpp
+SRC			= main.cpp Bureaucrat.cpp Form.cpp
+INC			= Bureaucrat.hpp Form.hpp
 OBJ_DIR		= obj
 OBJ			= $(addprefix $(OBJ_DIR)/, $(SRC:%.cpp=%.o))
 all : $(NAME)
