--- a/Module06/ex00/Makefile
+++ b/Module06/ex00/Makefile
@@ -6,15 +6,15 @@
 #    By: tmarts <tmarts@student.42heilbronn.de>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/11/20 16:29:48 by tmarts            #+#    #+#              #
-#    Updated: 2023/12/04 18:48:48 by tmarts           ###   ########.fr        #
+#    Updated: 2023/12/05 22:11:42 by tmarts           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME		= ScalarConverter
 CPP			= c++
 CPPFLAGS	= -Wall -Wextra -Werror -std=c++98 #-g3 -fsanitize=address
-SRC			= main.cpp ScalarConverter.cpp
-INC			= ScalarConverter.hpp
+SRC			= main.cpp ScalarConverter.cpp ScalarParser.cpp
+INC			= ScalarConverter.hpp ScalarParser.cpp
 OBJ_DIR		= obj
 OBJ			= $(addprefix $(OBJ_DIR)/, $(SRC:%.cpp=%.o))
 all : $(NAME)
