--- a/Module07/ex02/Makefile
+++ b/Module07/ex02/Makefile
@@ -6,15 +6,15 @@
 #    By: tmarts <tmarts@student.42heilbronn.de>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/16 21:57:23 by tmarts            #+#    #+#              #
-#    Updated: 2023/12/16 21:58:09 by tmarts           ###   ########.fr        #
+#    Updated: 2023/12/18 20:39:29 by tmarts           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME		= Array
 CPP			= c++
-CPPFLAGS	= -Wall -Wextra -Werror -std=c++98 #-g3 -fsanitize=address
+CPPFLAGS	= -Wall -Wextra -Werror -std=c++98 -g3 -fsanitize=address
 SRC			= main.cpp
-INC			= Array.hpp
+INC			= Array.hpp Array.tpp
 OBJ_DIR		= obj
 OBJ			= $(addprefix $(OBJ_DIR)/, $(SRC:%.cpp=%.o))
 all : $(NAME)
