--- a/Module07/ex00/Makefile
+++ b/Module07/ex00/Makefile
@@ -6,13 +6,13 @@
 #    By: tmarts <tmarts@student.42heilbronn.de>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/16 21:50:15 by tmarts            #+#    #+#              #
-#    Updated: 2023/12/16 21:50:46 by tmarts           ###   ########.fr        #
+#    Updated: 2023/12/19 17:35:47 by tmarts           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME		= whatever
 CPP			= c++
-CPPFLAGS	= -Wall -Wextra -Werror -std=c++98 #-g3 -fsanitize=address
+CPPFLAGS	= -Wall -Wextra -Werror -std=c++98 -g3 -fsanitize=address
 SRC			= main.cpp
 INC			= whatever.hpp
 OBJ_DIR		= obj
